# DynamicIsland-imgui-win

./: CMakeLists.txt  README.md  certificate.pfx  config.json  imgui.ini  ma.py
.trae/documents/: fix-dynamic-island-not-displaying.md
.trae/specs/: checklist.md  spec.md  tasks.md
.trae/specs/code-review-fix/: checklist.md  spec.md  tasks.md
.trae/specs/file-transfer-enhancement/: checklist.md  spec.md  tasks.md
.trae/specs/file_transfer/: checklist.md  spec.md  tasks.md
.trae/specs/limits-mouse-capture-area/: checklist.md  spec.md  tasks.md
.trae/specs/mouse_keyboard_fix/: checklist.md  spec.md  tasks.md
.trae/specs/status-menu-settings/: checklist.md  spec.md  tasks.md
src/: config.cpp  config.h  island.h  main.cpp  scheduler.cpp  scheduler.h  sysinfo.cpp  sysinfo.h  transferstation.cpp  transferstation.h  trayicon.cpp  trayicon.h
